--- a/src/app/pages/soaps/user-soaps/user-soaps.component.html
+++ b/src/app/pages/soaps/user-soaps/user-soaps.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 mb-3" *ngFor="let soap of soaps">
-        <div class="card" style="width: auto;">
+        <div class="card" style="width: auto; box-shadow: 5px 10px 8px #888888;" >
             <img [src]="soap.url" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">{{soap.brand}}</h5>
