--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -5,9 +5,9 @@
         <div *ngIf="isLoadingSpinner" style="text-align: center;">
           <app-loading-spinner></app-loading-spinner>
         </div>
-        <div class="col-md-9 col-lg-6 col-xl-5">
+        <div *ngIf="!hideLoginImage"  class="col-md-9 col-lg-6 col-xl-5">
           <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-            class="img-fluid" alt="Sample image">
+            class="img-fluid">
         </div>
         
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1" *ngIf="!isLoadingSpinner">
