implement table itself

--- a/src/app/pages/soaps/admin-soaps/admin-soaps.component.html
+++ b/src/app/pages/soaps/admin-soaps/admin-soaps.component.html
@@ -1,6 +1,8 @@
 <button class="btn btn-primary m-3" (click)="openCreateSoapModal()">Create Soap</button>
 <div #createSoapModal></div>
-<div>
+<ng2-smart-table class="table table-success table-striped"  [settings]="settings" [source]="source" ></ng2-smart-table>
+
+<!-- <div>
     <table class="table table-striped table-light" >
         <thead>
           <tr >
@@ -37,6 +39,6 @@
           </tr>
         </tbody>
       </table>
-</div>
+</div> -->
 
 
