register and login change

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
   
-                  <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                  <img src="https://app.imgforce.com/images/user/VbZ_1670930473_obey-the-beard.jpg"
                     class="img-fluid" alt="Sample image">
   
                 </div>
