--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -6,28 +6,72 @@
           <app-loading-spinner></app-loading-spinner>
         </div>
         <div *ngIf="!hideLoginImage"  class="col-md-9 col-lg-6 col-xl-5">
-          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+          <img src="https://app.imgforce.com/images/user/Rip_1670930246_Screenshot_2.jpg"
             class="img-fluid">
         </div>
         
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1" *ngIf="!isLoadingSpinner">
-          <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
+
+
+          <div class="form-outline mb-4">
+            <label class="form-label" for="username">Username</label>
+            <input type="text" 
+                   id="username" 
+                   class="form-control form-control-lg" 
+                   placeholder="Enter Username" 
+                   autocomplete="off" 
+                   [(ngModel)]="user.username" 
+                   #username="ngModel" 
+                   name="username" 
+                   required 
+                   minlength="5"
+                   maxlength="15"/>
+            <p *ngIf="username.invalid && (username.dirty || username.touched) && username.errors?.['required']" style="color: red;">Username is required</p>
+            <p *ngIf="username.invalid && (username.dirty || username.touched) && username.errors?.['minlength']" style="color: red;">Username must have more then 5 letters</p>
+            <p *ngIf="username.invalid && (username.dirty || username.touched) && username.errors?.['maxlength']" style="color: red;">Username must be less then 15 letters</p>
+          </div>
+
+          <div class="form-outline mb-4">
+            <label class="form-label" for="password">Password</label>
+            <input type="password" 
+                   id="password" 
+                   class="form-control form-control-lg" 
+                   placeholder="Enter Password" 
+                   autocomplete="off" 
+                   [(ngModel)]="user.password" 
+                   #password="ngModel" 
+                   name="password"
+                   required 
+                   minlength="5"
+                   maxlength="25"/>
+            <p *ngIf="password.invalid && (password.dirty || password.touched) && password.errors?.['required']" style="color: red;">Username is required</p>
+            <p *ngIf="password.invalid && (password.dirty || password.touched) && password.errors?.['minlength']" style="color: red;">Username must have more then 5 letters</p>
+            <p *ngIf="password.invalid && (username.dirty || password.touched) && password.errors?.['maxlength']" style="color: red;">Username must be less then 15 letters</p>
+          </div>
+
+
+          <button class="btn btn-primary btn-lg" style="padding-left: 2.5rem; padding-right: 2.5rem;" [disabled]="username.errors || password.errors" (click)="myLogin()">Login</button>
+          <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a routerLink="/register" class="link-danger">Register</a></p>
+
+          <!-- <form #loginForm="ngForm" (ngSubmit)="onLogin(loginForm)">
             <div class="alert alert-danger" *ngIf="error">
               <p>{{error}}</p>
             </div>
-            <div class="form-outline mb-4">
-              <input type="text" id="username" class="form-control form-control-lg" placeholder="Enter Username" ngModel name="username" required/>
-              <label class="form-label" for="username">Username</label>
-            </div>
+
+
+
+
+
+
   
-            <!-- Password input -->
+
             <div class="form-outline mb-3">
               <input type="password" id="password" class="form-control form-control-lg" placeholder="Enter password" ngModel name="password" required minlength="6" />
               <label class="form-label" for="password">Password</label>
             </div>
   
             <div class="d-flex justify-content-between align-items-center">
-              <!-- Checkbox -->
+
               <div class="form-check mb-0">
                 <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
                 <label class="form-check-label" for="form2Example3">
@@ -39,13 +83,12 @@
   
             <div class="text-center text-lg-start mt-4 pt-2">
               <button type="button" class="btn btn-primary btn-lg"
-                style="padding-left: 2.5rem; padding-right: 2.5rem;" class="btn btn-primary" type="submit" >Login</button>
-                <!-- style="padding-left: 2.5rem; padding-right: 2.5rem;" class="btn btn-primary" type="submit" [disabled]="!loginForm.valid">Login</button> -->
+                style="padding-left: 2.5rem; padding-right: 2.5rem;" class="btn btn-primary" [disabled]="username.error" type="submit" >Login</button>
               <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a routerLink="/register"
                   class="link-danger">Register</a></p>
             </div>
   
-          </form>
+          </form> -->
         </div>
       </div>
     </div>
