--- a/src/app/pages/soaps/user-soaps/user-soaps.component.html
+++ b/src/app/pages/soaps/user-soaps/user-soaps.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 mb-3" *ngFor="let soap of soaps">
-        <div class="card" style="width: auto; box-shadow: 5px 10px 8px #888888;" >
+    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 mb-5" *ngFor="let soap of userSoaps">
+        <!-- <div class="card" style="width: auto; box-shadow: 5px 10px 8px #888888;" >
             <img [src]="soap.url" class="card-img-top" height="350px" alt="...">
             <div class="card-body">
               <h5 class="card-title">{{soap.brand}}</h5>
@@ -15,7 +15,25 @@
               <a href="#" class="card-link">Card link</a>
               <a href="#" class="card-link">Another link</a>
             </div>
-        </div>   
+        </div>    -->
+
+
+
+        <div class="card"  style="width: auto; box-shadow: 5px 10px 8px #888888;">
+          <img [src]="soap.url" class="card-img-top" height="350px">
+          <div class="card-body">
+            <p class="card-text">{{soap.description}}<span style="cursor: pointer;" (click)="loadMoreDescription(soap.id)"><strong >...</strong></span></p>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <button type="button" class="btn btn-primary m-2" style="width: 96%; cursor: pointer;">Add to card</button>
+            </div>
+            <div class="col-6">
+              <button type="button" class="btn btn-secondary m-2" style="width: 92%; cursor: pointer;">View Details</button>
+            </div>
+          </div>
+          
+        </div>
     </div> 
 </div>
 
