--- a/src/app/pages/balms/user-balms/user-balms.component.html
+++ b/src/app/pages/balms/user-balms/user-balms.component.html
@@ -1,1 +1,20 @@
-<p>user-balms works!</p>
+<div class="row">
+    <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 mb-5" *ngFor="let balm of userBalms">
+        <div class="card"  style="width: auto; box-shadow: 5px 10px 8px #888888;">
+          <img [src]="balm.url" class="card-img-top" height="350px">
+          <div class="card-body">
+            <h4>{{balm.brand}}</h4>
+            <p class="card-text">{{balm.description}}<span style="cursor: pointer;" (click)="loadMoreDescription(balm.id)"><strong >...</strong></span></p>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <button type="button" class="btn btn-primary m-2" style="width: 96%; cursor: pointer;">Add to card</button>
+            </div>
+            <div class="col-6">
+              <button type="button" class="btn btn-secondary m-2" style="width: 92%; cursor: pointer;">View Details</button>
+            </div>
+          </div>
+        </div>
+    </div> 
+</div>
+
