--- a/src/app/pages/oils/oils.component.html
+++ b/src/app/pages/oils/oils.component.html
@@ -1,21 +1,6 @@
 <div class="row">
-    <div class="col-4"*ngFor="let oil of oils">
-        <div class="card" style="width: 20rem;">
-            <img [src]="oil.url" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">{{oil.brand}}</h5>
-              <p class="card-text">{{oil.description}}</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Scent : {{oil.scent}}</li>
-              <li class="list-group-item">Volume : {{oil.liquidVolume}}ml</li>
-              <li class="list-group-item">Quantity : {{oil.unitQuantity}}</li>
-              <li class="list-group-item">Price : {{oil.unitPrice}}$</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">Card link</a>
-              <a href="#" class="card-link">Another link</a>
-            </div>
-        </div>
-    </div> 
+  <app-user-oils *ngIf="!isAdminLogged; else adminOils"></app-user-oils>
+  <ng-template #adminOils>
+    <app-admin-oils></app-admin-oils>
+  </ng-template>
 </div>
