--- a/src/app/pages/oils/admin-oils/admin-oils.component.html
+++ b/src/app/pages/oils/admin-oils/admin-oils.component.html
@@ -1,1 +1,8 @@
-<p>admin-oils works!</p>
+<button class="btn btn-primary m-3" (click)="openCreateOilModal()">Create Oil</button>
+
+<ng2-smart-table class="table" [settings]="settings" [source]="source" (custom)="onAction($event)"></ng2-smart-table>
+<div class="modal-container">
+  <div #deleteOilModal></div>
+  <div #createOilModal></div>
+  <div #editOilModal></div>
+</div>
