--- a/src/app/components/modals/oil/create-oil-modal/create-oil-modal.component.css
+++ b/src/app/components/modals/oil/create-oil-modal/create-oil-modal.component.css
@@ -1,5 +1,5 @@
 
-.modal-container{
+.modal-container {
     width: 100%;
     height: 100%;
     background-color:rgba(0,0,0, 0.4);
@@ -14,9 +14,21 @@
     align-items: center;
 } 
 
-.btn-container{
+.modal-card {
+    width: 800px;
+    height: auto;
+    border: olive 1px solid;
+    background-color: white;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.btn-container {
     display: flex;
 } 
+
 button{
     margin: 5px;
 }
@@ -29,46 +41,17 @@ p {
     color: red;
 }
 
-
-/*image css*/
-/* .image-wrap {
-    padding: 10px;
-    border: solid 1px #e0e0e0;
-    display: inline-block;
+img {
+    width: 230px; 
+    height: 160px;
 }
 
-.img-space {
-    border: dashed 1px #d3d3d3;
-    border-radius: 8px;
-    background-color: #f2f2f2;
-    height: auto;
-    width: 100%;
-    padding: 10px;
-    min-height:135px;
+h3 {
+    text-align: left; 
+    text-decoration: underline;
 }
 
-.img-space img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    cursor: pointer;
+#data-image-input {
+    width: 98%;
 }
-
-.fileInputProfileWrap {
-    width: 100%;
-    height: auto;
-}
-
-.fileInputProfile {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    z-index: 99;
-    opacity: 0;
-}
-.fileInputProfile[disabled] + .img-space{
-    pointer-events: none;
-    cursor: not-allowed!important;
-} */
 
