--- a/src/app/components/modals/oil/create-oil-modal/create-oil-modal.component.html
+++ b/src/app/components/modals/oil/create-oil-modal/create-oil-modal.component.html
@@ -1,15 +1,6 @@
 <div class="modal-container">
-    <div
-      style="
-        width: 800px;
-        height: auto;
-        border: olive 1px solid;
-        background-color: white;
-        border-radius: 15px;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;">
-        <h3 class="p-2" style="text-align: left; text-decoration: underline;">Create Oil</h3>
+    <div class="modal-card">
+        <h3 class="p-2">Create Oil</h3>
         <div class="row">
             <div class="col-6">
                 <div class="m-2 mt-2">
@@ -34,10 +25,10 @@
             <div class="col-6">
                 <div class="m-2">
                     <label for="liquidVolume" class="form-label">Liquid Volume</label>
-                    <input type="number" id="liquidVolume" name="liquidVolume" class="form-control" min="1" max="500" required [(ngModel)]="createdOilModel.liquidVolume" #liquidVolume="ngModel">
+                    <input type="number" id="liquidVolume" name="liquidVolume" class="form-control" min="30" max="100" required [(ngModel)]="createdOilModel.liquidVolume" #liquidVolume="ngModel">
                     <p *ngIf="liquidVolume.invalid && (liquidVolume.dirty || liquidVolume.touched) && liquidVolume.errors?.['required']">Liquid Volum is required</p>
-                    <p *ngIf="liquidVolume.invalid && (liquidVolume.dirty || liquidVolume.touched) && liquidVolume.errors?.['min']">Liquid Volum must be more then 0</p>
-                    <p *ngIf="liquidVolume.invalid && (liquidVolume.dirty || liquidVolume.touched) && liquidVolume.errors?.['max']">Liquid Volum must be less then 500</p>
+                    <p *ngIf="liquidVolume.invalid && (liquidVolume.dirty || liquidVolume.touched) && liquidVolume.errors?.['min']">Liquid Volum must be more then 30 ml</p>
+                    <p *ngIf="liquidVolume.invalid && (liquidVolume.dirty || liquidVolume.touched) && liquidVolume.errors?.['max']">Liquid Volum must be less then 100 ml</p>
                 </div>
             </div>
             <div class="col-6">
@@ -54,8 +45,8 @@
                     <label for="quantity" class="form-label">Quantity</label>
                     <input type="number" id="quantity" name="quantity" class="form-control" min="1" max="500" required [(ngModel)]="createdOilModel.unitQuantity" #unitQuantity="ngModel">
                     <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['required']">Quantity is required</p>
-                    <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['min']">Quantity must be more then 0</p>
-                    <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['max']">Quantity must be less then 500</p>
+                    <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['min']">Quantity must be more then 0 units</p>
+                    <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['max']">Quantity must be less then 500 units</p>
                 </div>
             </div>
             <div class="col-6">
@@ -63,8 +54,8 @@
                     <label for="price" class="form-label">Price</label>
                     <input type="number" id="price" name="price" class="form-control" min="1" max="1000" required [(ngModel)]="createdOilModel.unitPrice" #unitPrice="ngModel">
                     <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['required']">Price is required</p>
-                    <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['min']">Price must be more then 0</p>
-                    <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['max']">Price must be lest then 1000</p>
+                    <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['min']">Price must be more then 0 $</p>
+                    <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['max']">Price must be lest then 1000 $</p>
                 </div>
             </div>
         </div>
@@ -77,11 +68,11 @@
                 <div class="img-space">
                     <div class="row">
                         <div class="col-12">
-                        <input type="file" style="width: 98%;" class="form-control" (change)="fileChangeEvent($event)">
-                        <p style="color: red;">{{imageError}}</p>
+                        <input type="file" id="data-image-input" class="form-control" (change)="fileChangeEvent($event)">
+                        <p>{{imageError}}</p>
         
                         <ng-container *ngIf="isImageChosen; else elseTemplate">
-                            <img [src]="cardImageBase64" class="m-1" style="width: 230px; height: 160px" />
+                            <img [src]="cardImageBase64" class="m-1" />
                         </ng-container>
                         <ng-template #elseTemplate>
                         </ng-template>
