--- a/src/app/pages/soaps/user-soaps/user-soaps.component.html
+++ b/src/app/pages/soaps/user-soaps/user-soaps.component.html
@@ -1,17 +1,17 @@
 <div class="row">
     <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 mb-5" *ngFor="let soap of userSoaps">
-        <div class="card"  style="width: auto; box-shadow: 5px 10px 8px #888888;">
-          <img [src]="soap.url" class="card-img-top" height="350px">
+        <div class="card">
+          <img [src]="soap.url" class="card-img-top">
           <div class="card-body">
             <h4>{{soap.brand}}</h4>
-            <p class="card-text">{{soap.description}}<span style="cursor: pointer;" (click)="loadMoreDescription(soap.id)"><strong >...</strong></span></p>
+            <p class="card-text">{{soap.description}}<span (click)="loadMoreDescription(soap.id)"><strong >...</strong></span></p>
           </div>
           <div class="row">
             <div class="col-6">
-              <button type="button" class="btn btn-primary m-2" style="width: 96%; cursor: pointer;">Add to card</button>
+              <button type="button" id="add-to-card-btn" class="btn btn-primary m-2">Add to card</button>
             </div>
             <div class="col-6">
-              <button type="button" class="btn btn-secondary m-2" style="width: 92%; cursor: pointer;">View Details</button>
+              <button type="button" id="view-details-btn" class="btn btn-secondary m-2">View Details</button>
             </div>
           </div>
         </div>
