--- a/src/app/components/modals/oil/delete-oil-modal/delete-oil-modal.component.html
+++ b/src/app/components/modals/oil/delete-oil-modal/delete-oil-modal.component.html
@@ -1,26 +1,16 @@
 <div class="modal-container">
-    <div
-      style="
-        width: 500px;
-        height: auto;
-        border: olive 1px solid;
-        background-color: white;
-        border-radius: 15px;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;">
-
-      <h4 class="mt-2" style="text-align: center;">Sure you want to delete this product?</h4>
+    <div class="modal-card">
+      <h4 class="mt-2" >Sure you want to delete this product?</h4>
       <hr>
       <div class="row">
         <div class="col-6">
-          <h5 style="margin-left: 20px;">Brand - {{title}}</h5>
-          <h5 style="margin-left: 20px;">Scent - {{subTitle}}</h5>
-          <h5 style="margin-left: 20px;">Quantity - {{quantity}}</h5>
-          <h5 style="margin-left: 20px;">Price per unit - {{price}}</h5>
+          <h5>Brand - {{title}}</h5>
+          <h5>Scent - {{subTitle}}</h5>
+          <h5>Quantity - {{quantity}}</h5>
+          <h5>Price per unit - {{price}}</h5>
         </div>
         <div class="col-6">
-          <img [src]="imageUrl" style="width: 180px; height: 150px">
+          <img [src]="imageUrl">
         </div>
       </div>
 
