--- a/src/app/components/modals/soap/edit-soap-modal/edit-soap-modal.component.css
+++ b/src/app/components/modals/soap/edit-soap-modal/edit-soap-modal.component.css
@@ -1,4 +1,3 @@
-
 .modal-container{
     width: 100%;
     height: 100%;
@@ -14,9 +13,25 @@
     align-items: center;
 } 
 
+.modal-card {
+    width: 500px;
+    height: auto;
+    border: olive 1px solid;
+    background-color: white;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .btn-container{
     display: flex;
 } 
+
 button{
     margin: 5px;
+}
+
+p {
+    color: red;
 }
