--- a/src/app/components/modals/soap/edit-soap-modal/edit-soap-modal.component.html
+++ b/src/app/components/modals/soap/edit-soap-modal/edit-soap-modal.component.html
@@ -1,24 +1,14 @@
 <div class="modal-container">
-    <div
-      style="
-        width: 500px;
-        height: auto;
-        border: olive 1px solid;
-        background-color: white;
-        border-radius: 15px;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;">
-
+    <div class="modal-card">
       <div class="m-3">
         <label for="brand" class="form-label">Brand</label>
         <input type="text" id="brand" class="form-control" [value]="model.brand" #brand>
-        <p *ngIf="errors.brandValidationError" style="color: red;">{{ errors.brandValidationError }}</p>
+        <p *ngIf="errors.brandValidationError">{{ errors.brandValidationError }}</p>
       </div>
       <div class="m-3">
         <label for="edition" class="form-label">Edition</label>
         <input type="text" id="edition" class="form-control" #edition [value]="model.edition">
-        <p *ngIf="errors.editionValidationError" style="color: red;">{{ errors.editionValidationError }}</p>
+        <p *ngIf="errors.editionValidationError">{{ errors.editionValidationError }}</p>
 
       </div>
       <div class="m-3">
@@ -28,12 +18,12 @@
       <div class="m-3">
         <label for="quantity" class="form-label">Quantity</label>
         <input type="number" min="1" max="100" id="quantity" class="form-control" #quantity [value]="model.unitQuantity">
-        <p *ngIf="errors.quantityValidationError" style="color: red;">{{ errors.quantityValidationError }}</p>
+        <p *ngIf="errors.quantityValidationError">{{ errors.quantityValidationError }}</p>
       </div>
       <div class="m-3">
         <label for="price" class="form-label">Price</label>
         <input type="number" id="price" min="1" max="100" class="form-control" #price [value]="model.unitPrice">
-        <p *ngIf="errors.priceValidationError" style="color: red;">{{ errors.priceValidationError }}</p>
+        <p *ngIf="errors.priceValidationError">{{ errors.priceValidationError }}</p>
       </div>
       <div class="m-3">
         <label for="formFile" class="form-label">Image url</label>
@@ -44,7 +34,7 @@
 
 
                   <input type="file" class="form-control" (change)="fileChangeEvent($event)">
-                  <p *ngIf="errors.imageUrlValidationError" style="color: red;">{{ errors.imageUrlValidationError }}</p>
+                  <p *ngIf="errors.imageUrlValidationError">{{ errors.imageUrlValidationError }}</p>
                   <!-- <input type="file" class="form-control" (change)="fileChangeEvent($event)" class="fileInputProfile"> -->
 
                   <div *ngIf="showImagePanel">
