--- a/src/app/components/modals/soap/create-soap-modal/create-soap-modal.component.css
+++ b/src/app/components/modals/soap/create-soap-modal/create-soap-modal.component.css
@@ -14,6 +14,18 @@
     align-items: center;
 } 
 
+
+.modal-card {
+    width: 500px;
+    height: auto;
+    border: olive 1px solid;
+    background-color: white;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .btn-container{
     display: flex;
 } 
@@ -25,46 +37,12 @@ label {
     font-weight: 600;
 }
 
-
-/*image css*/
-/* .image-wrap {
-    padding: 10px;
-    border: solid 1px #e0e0e0;
-    display: inline-block;
+p {
+    color: red;
 }
 
-.img-space {
-    border: dashed 1px #d3d3d3;
-    border-radius: 8px;
-    background-color: #f2f2f2;
-    height: auto;
-    width: 100%;
-    padding: 10px;
-    min-height:135px;
+img {
+    width: 230px;
+    height: 160px;
 }
-
-.img-space img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    cursor: pointer;
-}
-
-.fileInputProfileWrap {
-    width: 100%;
-    height: auto;
-}
-
-.fileInputProfile {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    z-index: 99;
-    opacity: 0;
-}
-.fileInputProfile[disabled] + .img-space{
-    pointer-events: none;
-    cursor: not-allowed!important;
-} */
 
