--- a/src/app/components/modals/soap/create-soap-modal/create-soap-modal.component.html
+++ b/src/app/components/modals/soap/create-soap-modal/create-soap-modal.component.html
@@ -1,29 +1,18 @@
 <div class="modal-container">
-    <div
-      style="
-        width: 500px;
-        height: auto;
-        border: olive 1px solid;
-        background-color: white;
-        border-radius: 15px;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;">
-
-
+    <div class="modal-card">
       <div class="m-3">
         <label for="brand" class="form-label">Brand</label>
         <input type="text" id="brand" name="brand" class="form-control" required minlength="3" [(ngModel)]="createdSoapModel.brand" #brand="ngModel" autocomplete="off">
-        <p *ngIf="brand.invalid && (brand.dirty || brand.touched) && brand.errors?.['required']" style="color: red;">Brand is required</p>
-        <p *ngIf="brand.invalid && (brand.dirty || brand.touched) && brand.errors?.['minlength']" style="color: red;">Brand must have more then 3 letters</p>
+        <p *ngIf="brand.invalid && (brand.dirty || brand.touched) && brand.errors?.['required']">Brand is required</p>
+        <p *ngIf="brand.invalid && (brand.dirty || brand.touched) && brand.errors?.['minlength']">Brand must have more then 3 letters</p>
       </div>
 
       <div class="m-3">
         <label for="edition" class="form-label">Edition</label>
         <input type="text" id="edition" name="edition" class="form-control" required minlength="3" maxlength="50" [(ngModel)]="createdSoapModel.edition" #edition="ngModel">
-        <p *ngIf="edition.invalid && (edition.dirty || edition.touched) && edition.errors?.['required']" style="color: red;">Edition is required</p>
-        <p *ngIf="edition.invalid && (edition.dirty || edition.touched) && edition.errors?.['minlength']" style="color: red;">Edition must have more then 3 letters</p>
-        <p *ngIf="edition.invalid && (edition.dirty || edition.touched) && edition.errors?.['maxlength']" style="color: red;">Edition must be less then 50 letters</p>
+        <p *ngIf="edition.invalid && (edition.dirty || edition.touched) && edition.errors?.['required']">Edition is required</p>
+        <p *ngIf="edition.invalid && (edition.dirty || edition.touched) && edition.errors?.['minlength']">Edition must have more then 3 letters</p>
+        <p *ngIf="edition.invalid && (edition.dirty || edition.touched) && edition.errors?.['maxlength']">Edition must be less then 50 letters</p>
       </div>
       <div class="m-3">
         <label for="description" class="form-label">Description</label>
@@ -32,28 +21,26 @@
       <div class="m-3">
         <label for="quantity" class="form-label">Quantity</label>
         <input type="number" id="quantity" name="quantity" class="form-control" min="1" max="500" required [(ngModel)]="createdSoapModel.unitQuantity" #unitQuantity="ngModel">
-        <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['required']" style="color: red;">Quantity is required</p>
-        <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['min']" style="color: red;">Quantity must be more then 0</p>
-        <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['max']" style="color: red;">Quantity must be less then 500</p>
+        <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['required']">Quantity is required</p>
+        <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['min']">Quantity must be more then 0</p>
+        <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['max']">Quantity must be less then 500</p>
       </div>
       <div class="m-3">
         <label for="price" class="form-label">Price</label>
         <input type="number" id="price" name="price" class="form-control" min="1" max="1000" required [(ngModel)]="createdSoapModel.unitPrice" #unitPrice="ngModel">
-        <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['required']" style="color: red;">Price is required</p>
-        <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['min']" style="color: red;">Price must be more then 0</p>
-        <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['max']" style="color: red;">Price must be lest then 1000</p>
+        <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['required']">Price is required</p>
+        <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['min']">Price must be more then 0</p>
+        <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['max']">Price must be lest then 1000</p>
       </div>
       <div class="m-3">
-        <label for="image" class="form-label">Image</label>
-        <div class="fileInputProfileWrap">  
+        <label for="image" class="form-label">Image</label> 
           <div class="img-space">
               <div class="row">
                 <div class="col-12">
                   <input type="file" class="form-control" (change)="fileChangeEvent($event)">
-                  <p style="color: red;">{{imageError}}</p>
-
+                  <p>{{imageError}}</p>
                   <ng-container *ngIf="isImageChosen; else elseTemplate">
-                    <img [src]="cardImageBase64" class="m-1" style="width: 230px; height: 160px" />
+                    <img [src]="cardImageBase64" class="m-1"/>
                   </ng-container>
                   <ng-template #elseTemplate>
                     <!-- <img src="./../../assets/placeholder.png" class="img-responsive"> -->
@@ -62,14 +49,7 @@
               </div>
               
           </div>
-        </div>
         <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="isImageChosen">Remove</a>
-
-
-
-        <!-- <label for="image" class="form-label">Image url</label>
-        <input type="text" id="image" name="image" class="form-control" required [(ngModel)]="createdSoapModel.url" #imageUrl="ngModel">
-        <p *ngIf="imageUrl.invalid && (imageUrl.dirty || imageUrl.touched) && brand.errors?.['required']" style="color: red;">Please enter image url</p> -->
       </div>
   
       <div class="btn-container modal-footer">
