--- a/src/app/components/modals/soap/delete-soap-modal/delete-soap-modal.component.css
+++ b/src/app/components/modals/soap/delete-soap-modal/delete-soap-modal.component.css
@@ -14,10 +14,29 @@
     align-items: center;
 } 
 
+.modal-card {
+    width: 500px;
+    height: auto;
+    border: olive 1px solid;
+    background-color: white;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .btn-container{
     display: flex;
 } 
 
 button {
     margin: 5px;
+}
+
+h5 {
+    margin-left: 20px;
+}
+
+img {
+    width: 180px; height: 150px
 }
